--- a/app/src/main/res/layout/content_match_score_card.xml
+++ b/app/src/main/res/layout/content_match_score_card.xml
@@ -13,7 +13,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/scoreteam"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="90dp"
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="2dp"
         card_view:cardUseCompatPadding="true"
@@ -43,6 +43,16 @@
             android:textSize="16dp"
             android:layout_marginTop="5dp"
             android:layout_gravity="center_horizontal" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:id="@+id/textrun"
+                android:textColor="#fff"
+                android:textSize="16dp"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="center_horizontal" />
 
         </LinearLayout>
 
