--- a/app/src/main/res/layout/child_match_list.xml
+++ b/app/src/main/res/layout/child_match_list.xml
@@ -31,6 +31,7 @@
         android:text=""
         android:hint="date"
         android:id="@+id/txttime"
+        android:textColor="@color/material_blue_grey_800"
         android:layout_gravity="center"/>
     </LinearLayout>
 
