--- a/app/src/main/res/layout/content_match_score_card.xml
+++ b/app/src/main/res/layout/content_match_score_card.xml
@@ -13,7 +13,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/scoreteam"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="wrap_content"
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="2dp"
         card_view:cardUseCompatPadding="true"
@@ -32,6 +32,7 @@
             android:id="@+id/textteam"
             android:textColor="#fff"
             android:textSize="18dp"
+            android:gravity="center"
             android:layout_marginTop="5dp"
             android:layout_gravity="center_horizontal" />
         <TextView
@@ -78,10 +79,29 @@
             android:layout_gravity="center_horizontal"
             android:gravity="center"/>
         </android.support.v7.widget.CardView>
-    <ScrollView
+
+    <android.support.v7.widget.CardView
+        android:id="@+id/scorewin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        >
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="2dp"
+        card_view:cardUseCompatPadding="true"
+        android:foreground="?android:attr/selectableItemBackground"
+        tools:ignore="NewApi">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:id="@+id/textwin"
+            android:textColor="#3b5998"
+            android:textSize="16dp"
+            android:layout_marginTop="5dp"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
+            android:textStyle="bold" />
+    </android.support.v7.widget.CardView>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -149,7 +169,7 @@
             </LinearLayout>
             <ListView
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="wrap_content"
                 android:id="@+id/listbatsman"
                 android:background="#fff"/>
 <!--
@@ -228,5 +248,4 @@
 
         </LinearLayout>
 
-    </ScrollView>
 </LinearLayout>
