--- a/app/src/main/res/layout/content_upcoming_list.xml
+++ b/app/src/main/res/layout/content_upcoming_list.xml
@@ -12,7 +12,8 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="bidding.example.com.bidding.UpcomingList"
     tools:showIn="@layout/activity_upcoming_list"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="#dedede">
 
 
     <ListView
