--- a/app/src/main/res/layout/fragment_cricket_terms.xml
+++ b/app/src/main/res/layout/fragment_cricket_terms.xml
@@ -147,11 +147,51 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:text="@string/cncl"
+        android:text="@string/make30"
         android:textColor="@color/textColor"
         android:background="#fff"
         android:textSize="16sp"
         android:gravity="center"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="@string/make50"
+            android:textColor="@color/textColor"
+            android:background="#fff"
+            android:textSize="16sp"
+            android:gravity="center"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="@string/make100"
+            android:textColor="@color/textColor"
+            android:background="#fff"
+            android:textSize="16sp"
+            android:gravity="center"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="@string/innrun"
+            android:textColor="@color/textColor"
+            android:background="#fff"
+            android:textSize="16sp"
+            android:gravity="center"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="@string/cncl"
+            android:textColor="@color/textColor"
+            android:background="#fff"
+            android:textSize="16sp"
+            android:gravity="center"/>
 
     </LinearLayout>
 </ScrollView>
