--- a/app/src/main/res/layout/alert_odd.xml
+++ b/app/src/main/res/layout/alert_odd.xml
@@ -9,7 +9,7 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_head"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="2dp"
         card_view:cardUseCompatPadding="true"
@@ -51,7 +51,7 @@
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_game"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="2dp"
         card_view:cardUseCompatPadding="true"
@@ -82,11 +82,11 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1.3"
+            android:layout_weight="1.4"
             android:text=""
             android:hint="game"
             android:textColor="#c99802"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:layout_marginLeft="10dp"
             android:layout_gravity="center"
             android:id="@+id/textgame"
@@ -96,7 +96,7 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.7"
+        android:layout_weight="0.6"
         android:text=""
         android:hint="Odds"
         android:textColor="#000"
@@ -108,7 +108,7 @@
     <EditText
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_weight="1.1"
         android:id="@+id/editBet"
         android:textColor="#000"
         android:layout_gravity="right"
@@ -134,8 +134,8 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="5dp">
     <Button
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
+        android:layout_width="110dp"
+        android:layout_height="45dp"
         android:text="Cancel"
         android:id="@+id/btnCancel"
         android:textColor="#fff"
@@ -143,8 +143,8 @@
         android:layout_gravity="center_horizontal" />
 
     <Button
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
+        android:layout_width="110dp"
+        android:layout_height="45dp"
         android:text="Place Bet"
         android:id="@+id/btnPlaceBet"
         android:layout_marginLeft="4dp"
