--- a/app/src/main/res/layout/content_play_details.xml
+++ b/app/src/main/res/layout/content_play_details.xml
@@ -114,7 +114,8 @@
                 android:id="@+id/txtheading"
                 android:textSize="16sp"
                 android:textColor="#3b5998"
-                android:layout_gravity="center_horizontal" />
+                android:gravity="center"
+                android:layout_gravity="center" />
         </android.support.v7.widget.CardView>
 
 
