--- a/app/src/main/res/layout/cricket_transaction.xml
+++ b/app/src/main/res/layout/cricket_transaction.xml
@@ -14,13 +14,14 @@
         android:layout_marginTop="10dp">
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/mtch_nm"
             android:textColor="@color/textColor"
-            android:textSize="16sp"
+            android:textSize="15sp"
             android:text=""
             android:singleLine="true"
+            android:layout_gravity="center"
             android:gravity="center"/>
 
         <View
